--- a/destination.html
+++ b/destination.html
@@ -14,19 +14,20 @@
         <div class="flex justify-between  items-center  ">
             <img class="ml-[39px] lg:ml-[55px]" src="./images/site-logo.svg" alt="img">
             <div class="hidden pl-[64px] lg:flex  w-[320px] h-[1px] bg-white"></div>
-            <div class="px-[48px] py-[26px] lg:px-[123px]  navbar-bg flex gap-[48px]">
+            <div class="px-[20px] md:px-[48px] py-[26px] lg:px-[123px]  navbar-bg hidden sm:flex gap-[48px]">
                 <a class=" text-[white] text-[16px] font-normal " href="./space.html">00 HOME</a>
                 <a class=" text-[white] text-[16px] font-normal " href="./destination.html">01 DESTINATION</a>
                 <a class=" text-[white] text-[16px] font-normal " href="./crew.html"> 02 CREW</a>
                 <a class=" text-[white] text-[16px] font-normal " href="./technology.html">03 TECHNOLOGY</a>
             </div>
+            <img class="sm:hidden mr-[24px]" src="./images/menu-1.svg" alt="menu img">
         </div>
     </header>
     <main>
         <!-- hero section -->
         <section>
             <div class="containers hero">
-       <div class="mb-[60px] lg:mb-[0px]  ml-[39px] lg:ml-[0px] text-center justify-center sm:justify-start flex gap-[24px] mt-[76px]">
+       <div class="mb-[60px] lg:mb-[0px]   ml-[39px] lg:ml-[0px] text-center justify-center sm:justify-start flex gap-[24px] mt-[76px]">
          <p class="uppercase text-white text-[28px] opacity-[24%]">01</p>
          <p class="uppercase text-[28px] text-[#FFFFFF]">Pick your destination</p>
        </div>
